cfg/driver/ANTLR4Parser.py
# Generated from ANTLR4Parser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ANTLR4Parser ( Parser ):

    grammarFileName = "ANTLR4Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'parser'", "'grammar'", "'options'", 
                     "'='", "':'", "';'", "'|'", "'('", "')'", "'{'", "'}'", 
                     "'.'", "'?'", "'*'", "'+'" ]

    symbolicNames = [ "<INVALID>", "PARSER", "GRAMMAR", "OPTIONS", "ASSIGN", 
                      "COLON", "SEMICOLON", "OR", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "DOT", "QUESTION", "STAR", "PLUS", "TOKEN_REF", 
                      "RULE_REF", "STRING_LITERAL", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_grammarSpec = 0
    RULE_grammarDecl = 1
    RULE_grammarType = 2
    RULE_optionsSpec = 3
    RULE_option = 4
    RULE_identifier = 5
    RULE_ruleSpec = 6
    RULE_parserRuleSpec = 7
    RULE_lexerRuleSpec = 8
    RULE_ruleAltList = 9
    RULE_alternative = 10
    RULE_element = 11
    RULE_ebnfSuffix = 12
    RULE_atom = 13
    RULE_lexerAltList = 14
    RULE_lexerAlt = 15
    RULE_lexerElement = 16
    RULE_lexerAtom = 17

    ruleNames =  [ "grammarSpec", "grammarDecl", "grammarType", "optionsSpec", 
                   "option", "identifier", "ruleSpec", "parserRuleSpec", 
                   "lexerRuleSpec", "ruleAltList", "alternative", "element", 
                   "ebnfSuffix", "atom", "lexerAltList", "lexerAlt", "lexerElement", 
                   "lexerAtom" ]

    EOF = Token.EOF
    PARSER=1
    GRAMMAR=2
    OPTIONS=3
    ASSIGN=4
    COLON=5
    SEMICOLON=6
    OR=7
    LPAREN=8
    RPAREN=9
    LBRACE=10
    RBRACE=11
    DOT=12
    QUESTION=13
    STAR=14
    PLUS=15
    TOKEN_REF=16
    RULE_REF=17
    STRING_LITERAL=18
    LINE_COMMENT=19
    BLOCK_COMMENT=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GrammarSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ANTLR4Parser.EOF, 0)

        def grammarDecl(self):
            return self.getTypedRuleContext(ANTLR4Parser.GrammarDeclContext,0)


        def optionsSpec(self):
            return self.getTypedRuleContext(ANTLR4Parser.OptionsSpecContext,0)


        def ruleSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.RuleSpecContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.RuleSpecContext,i)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_grammarSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarSpec" ):
                listener.enterGrammarSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarSpec" ):
                listener.exitGrammarSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarSpec" ):
                return visitor.visitGrammarSpec(self)
            else:
                return visitor.visitChildren(self)




    def grammarSpec(self):

        localctx = ANTLR4Parser.GrammarSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_grammarSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 36
                self.grammarDecl()


            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 39
                self.optionsSpec()


            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16 or _la==17:
                self.state = 42
                self.ruleSpec()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(ANTLR4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarType(self):
            return self.getTypedRuleContext(ANTLR4Parser.GrammarTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(ANTLR4Parser.IdentifierContext,0)


        def SEMICOLON(self):
            return self.getToken(ANTLR4Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_grammarDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarDecl" ):
                listener.enterGrammarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarDecl" ):
                listener.exitGrammarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarDecl" ):
                return visitor.visitGrammarDecl(self)
            else:
                return visitor.visitChildren(self)




    def grammarDecl(self):

        localctx = ANTLR4Parser.GrammarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_grammarDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.grammarType()
            self.state = 51
            self.identifier()
            self.state = 52
            self.match(ANTLR4Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARSER(self):
            return self.getToken(ANTLR4Parser.PARSER, 0)

        def GRAMMAR(self):
            return self.getToken(ANTLR4Parser.GRAMMAR, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_grammarType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarType" ):
                listener.enterGrammarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarType" ):
                listener.exitGrammarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarType" ):
                return visitor.visitGrammarType(self)
            else:
                return visitor.visitChildren(self)




    def grammarType(self):

        localctx = ANTLR4Parser.GrammarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_grammarType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(ANTLR4Parser.PARSER)
            self.state = 55
            self.match(ANTLR4Parser.GRAMMAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionsSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPTIONS(self):
            return self.getToken(ANTLR4Parser.OPTIONS, 0)

        def LBRACE(self):
            return self.getToken(ANTLR4Parser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ANTLR4Parser.RBRACE, 0)

        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.OptionContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.OptionContext,i)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_optionsSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionsSpec" ):
                listener.enterOptionsSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionsSpec" ):
                listener.exitOptionsSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionsSpec" ):
                return visitor.visitOptionsSpec(self)
            else:
                return visitor.visitChildren(self)




    def optionsSpec(self):

        localctx = ANTLR4Parser.OptionsSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_optionsSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(ANTLR4Parser.OPTIONS)
            self.state = 58
            self.match(ANTLR4Parser.LBRACE)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16 or _la==17:
                self.state = 59
                self.option()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(ANTLR4Parser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.IdentifierContext,i)


        def ASSIGN(self):
            return self.getToken(ANTLR4Parser.ASSIGN, 0)

        def SEMICOLON(self):
            return self.getToken(ANTLR4Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOption" ):
                return visitor.visitOption(self)
            else:
                return visitor.visitChildren(self)




    def option(self):

        localctx = ANTLR4Parser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_option)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.identifier()
            self.state = 68
            self.match(ANTLR4Parser.ASSIGN)
            self.state = 69
            self.identifier()
            self.state = 70
            self.match(ANTLR4Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE_REF(self):
            return self.getToken(ANTLR4Parser.RULE_REF, 0)

        def TOKEN_REF(self):
            return self.getToken(ANTLR4Parser.TOKEN_REF, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = ANTLR4Parser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not(_la==16 or _la==17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parserRuleSpec(self):
            return self.getTypedRuleContext(ANTLR4Parser.ParserRuleSpecContext,0)


        def lexerRuleSpec(self):
            return self.getTypedRuleContext(ANTLR4Parser.LexerRuleSpecContext,0)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_ruleSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleSpec" ):
                listener.enterRuleSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleSpec" ):
                listener.exitRuleSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleSpec" ):
                return visitor.visitRuleSpec(self)
            else:
                return visitor.visitChildren(self)




    def ruleSpec(self):

        localctx = ANTLR4Parser.RuleSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ruleSpec)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.parserRuleSpec()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.lexerRuleSpec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParserRuleSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE_REF(self):
            return self.getToken(ANTLR4Parser.RULE_REF, 0)

        def COLON(self):
            return self.getToken(ANTLR4Parser.COLON, 0)

        def ruleAltList(self):
            return self.getTypedRuleContext(ANTLR4Parser.RuleAltListContext,0)


        def SEMICOLON(self):
            return self.getToken(ANTLR4Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_parserRuleSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParserRuleSpec" ):
                listener.enterParserRuleSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParserRuleSpec" ):
                listener.exitParserRuleSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParserRuleSpec" ):
                return visitor.visitParserRuleSpec(self)
            else:
                return visitor.visitChildren(self)




    def parserRuleSpec(self):

        localctx = ANTLR4Parser.ParserRuleSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parserRuleSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ANTLR4Parser.RULE_REF)
            self.state = 79
            self.match(ANTLR4Parser.COLON)
            self.state = 80
            self.ruleAltList()
            self.state = 81
            self.match(ANTLR4Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LexerRuleSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOKEN_REF(self):
            return self.getToken(ANTLR4Parser.TOKEN_REF, 0)

        def COLON(self):
            return self.getToken(ANTLR4Parser.COLON, 0)

        def lexerAltList(self):
            return self.getTypedRuleContext(ANTLR4Parser.LexerAltListContext,0)


        def SEMICOLON(self):
            return self.getToken(ANTLR4Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_lexerRuleSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLexerRuleSpec" ):
                listener.enterLexerRuleSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLexerRuleSpec" ):
                listener.exitLexerRuleSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLexerRuleSpec" ):
                return visitor.visitLexerRuleSpec(self)
            else:
                return visitor.visitChildren(self)




    def lexerRuleSpec(self):

        localctx = ANTLR4Parser.LexerRuleSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lexerRuleSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(ANTLR4Parser.TOKEN_REF)
            self.state = 84
            self.match(ANTLR4Parser.COLON)
            self.state = 85
            self.lexerAltList()
            self.state = 86
            self.match(ANTLR4Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleAltListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alternative(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.AlternativeContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.AlternativeContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(ANTLR4Parser.OR)
            else:
                return self.getToken(ANTLR4Parser.OR, i)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_ruleAltList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleAltList" ):
                listener.enterRuleAltList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleAltList" ):
                listener.exitRuleAltList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleAltList" ):
                return visitor.visitRuleAltList(self)
            else:
                return visitor.visitChildren(self)




    def ruleAltList(self):

        localctx = ANTLR4Parser.RuleAltListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ruleAltList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.alternative()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 89
                self.match(ANTLR4Parser.OR)
                self.state = 90
                self.alternative()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.ElementContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.ElementContext,i)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_alternative

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlternative" ):
                listener.enterAlternative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlternative" ):
                listener.exitAlternative(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlternative" ):
                return visitor.visitAlternative(self)
            else:
                return visitor.visitChildren(self)




    def alternative(self):

        localctx = ANTLR4Parser.AlternativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_alternative)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 463104) != 0):
                self.state = 96
                self.element()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(ANTLR4Parser.AtomContext,0)


        def ebnfSuffix(self):
            return self.getTypedRuleContext(ANTLR4Parser.EbnfSuffixContext,0)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = ANTLR4Parser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_element)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.atom()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.atom()
                self.state = 104
                self.ebnfSuffix()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EbnfSuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION(self):
            return self.getToken(ANTLR4Parser.QUESTION, 0)

        def STAR(self):
            return self.getToken(ANTLR4Parser.STAR, 0)

        def PLUS(self):
            return self.getToken(ANTLR4Parser.PLUS, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_ebnfSuffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEbnfSuffix" ):
                listener.enterEbnfSuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEbnfSuffix" ):
                listener.exitEbnfSuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEbnfSuffix" ):
                return visitor.visitEbnfSuffix(self)
            else:
                return visitor.visitChildren(self)




    def ebnfSuffix(self):

        localctx = ANTLR4Parser.EbnfSuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ebnfSuffix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE_REF(self):
            return self.getToken(ANTLR4Parser.RULE_REF, 0)

        def TOKEN_REF(self):
            return self.getToken(ANTLR4Parser.TOKEN_REF, 0)

        def STRING_LITERAL(self):
            return self.getToken(ANTLR4Parser.STRING_LITERAL, 0)

        def DOT(self):
            return self.getToken(ANTLR4Parser.DOT, 0)

        def LPAREN(self):
            return self.getToken(ANTLR4Parser.LPAREN, 0)

        def ruleAltList(self):
            return self.getTypedRuleContext(ANTLR4Parser.RuleAltListContext,0)


        def RPAREN(self):
            return self.getToken(ANTLR4Parser.RPAREN, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = ANTLR4Parser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_atom)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(ANTLR4Parser.RULE_REF)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(ANTLR4Parser.TOKEN_REF)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(ANTLR4Parser.STRING_LITERAL)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.match(ANTLR4Parser.DOT)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 114
                self.match(ANTLR4Parser.LPAREN)
                self.state = 115
                self.ruleAltList()
                self.state = 116
                self.match(ANTLR4Parser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LexerAltListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lexerAlt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.LexerAltContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.LexerAltContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(ANTLR4Parser.OR)
            else:
                return self.getToken(ANTLR4Parser.OR, i)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_lexerAltList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLexerAltList" ):
                listener.enterLexerAltList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLexerAltList" ):
                listener.exitLexerAltList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLexerAltList" ):
                return visitor.visitLexerAltList(self)
            else:
                return visitor.visitChildren(self)




    def lexerAltList(self):

        localctx = ANTLR4Parser.LexerAltListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_lexerAltList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.lexerAlt()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 121
                self.match(ANTLR4Parser.OR)
                self.state = 122
                self.lexerAlt()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LexerAltContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lexerElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.LexerElementContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.LexerElementContext,i)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_lexerAlt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLexerAlt" ):
                listener.enterLexerAlt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLexerAlt" ):
                listener.exitLexerAlt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLexerAlt" ):
                return visitor.visitLexerAlt(self)
            else:
                return visitor.visitChildren(self)




    def lexerAlt(self):
